--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,8 +17,8 @@
     <string name="permission_rationale">"Contacts permissions are needed for providing email
         completions."
     </string>
-    <string name="current_logged_in_email"></string>
-    <string name="current_logged_in_user_id"></string>
+    <string name="current_logged_in_email">org.elsys.benevent.CURRENT_LOGGED_IN_EMAIL</string>
+    <string name="current_logged_in_user_id">org.elsys.benevent.CURRENT_LOGGED_IN_USER_ID</string>
     <string name="title_activity_main">MainActivity</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
@@ -26,4 +26,5 @@
 
     <string name="action_settings">Settings</string>
     <string name="title_activity_select_location">Select Location</string>
+    <string name="unavailable_email">none</string>
 </resources>
