--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,31 +1,30 @@
 <resources>
     <string name="app_name">Benevent</string>
-    <string name="title_activity_login">Sign in</string>
-    <string name="title_activity_register">Register</string>
+    <string name="title_activity_login">Влизане</string>
+    <string name="title_activity_register">Регистрация</string>
 
     <!-- Strings related to login -->
-    <string name="prompt_email">Email</string>
-    <string name="prompt_password">Password</string>
-    <string name="prompt_password_confirm">Confirm Password</string>
-    <string name="action_sign_in">Sign in or register</string>
-    <string name="action_sign_in_short">Sign in</string>
-    <string name="action_register_short">Register</string>
-    <string name="error_invalid_email">This email address is invalid</string>
-    <string name="error_invalid_password">This password is too short</string>
-    <string name="error_incorrect_password">This password is incorrect</string>
-    <string name="error_field_required">This field is required</string>
-    <string name="permission_rationale">"Contacts permissions are needed for providing email
-        completions."
+    <string name="prompt_email">Електронна поща</string>
+    <string name="prompt_password">Парола</string>
+    <string name="prompt_password_confirm">Потвърди парола</string>
+    <string name="action_sign_in">Влез или се регистрирай</string>
+    <string name="action_sign_in_short">Вход</string>
+    <string name="action_register_short">Регистрация</string>
+    <string name="error_invalid_email">Невалиден и-мейл</string>
+    <string name="error_invalid_password">Тази парола е прекалено кратка</string>
+    <string name="error_incorrect_password">Паролата е неправилна</string>
+    <string name="error_field_required">Полето е задължително</string>
+    <string name="permission_rationale">"Приложението изисква достъп до контактите Ви"
     </string>
     <string name="current_logged_in_email">org.elsys.benevent.CURRENT_LOGGED_IN_EMAIL</string>
     <string name="current_logged_in_user_id">org.elsys.benevent.CURRENT_LOGGED_IN_USER_ID</string>
-    <string name="title_activity_main">MainActivity</string>
+    <string name="title_activity_main">Покани за събития</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
-    <string name="title_activity_select_location">Select Location</string>
+    <string name="title_activity_select_location">Избери локация</string>
     <string name="unavailable_email">none</string>
 
     <!-- TODO: Remove or change this placeholder text -->
